--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ MAIN LOGO - CAROUSEL OF IMAGES
 .main-title a {
   color: black;
   font-size: 3em;
-  font-family: "Jenna Sue", sans-serif;
+  font-family: "jenna_sueregular", sans-serif;
   text-decoration: none;
 
 }
