--- a/css/style.css
+++ b/css/style.css
@@ -103,10 +103,14 @@ button {
 MAIN LOGO - CAROUSEL OF IMAGES
 *******************************************/
 
+.gallery {
+  width: 100%;
+}
+
 .gallery-cell {
   width: 100%;
   height: 200px;
-  /*margin-right: 10px;*/
+  margin-right: 10px;
   background: #54C0B7;
   counter-increment: gallery-cell;
 }
